--- a/wiki/V8Convert_Overloading.wiki
+++ b/wiki/V8Convert_Overloading.wiki
@@ -74,7 +74,6 @@ This approach does have a couple limitations. Notably:
   * Some potentially interesting rule-ordering optimizations are impossible because of the lack of back-tracking.
 
 We could probably add back-tracking support by using an internally-handled native exception type to tell the higher-level scope that a rule subset failed to match. But using try/catch blocks for that sounds like a good deal of unneeded overhead. That might, incidentally, simplify the current end-of-list handling.
-
 ==The Big, Fat, Hairy Example==
 
 Here's a rather detailed example...
@@ -296,6 +295,76 @@ Assertion OK: Got expected exception: Error: No predicates in the argument dispa
 ConvertDemo.hpp:233:~BoundSubNative(): @0x82a56f8 is destructing
 ConvertDemo.hpp:53:~BoundNative(): @0x82a56f8 is destructing.
 }}}
+
+
+==Argument Type Validation via Overloading==
+
+One (admittedly unforeseen) use of the overloading API is the ability to use it for performing argument validation for non-overloaded functions. When used this way, cvv8 makes sure the argument predicate(s) match before calling the bound function. Thus the function's body can be assured that the precondition logic passed before the function was called.
+
+=== Example of Argument Type/Range Validation ===
+
+Here's an example taken from [V8Convert_Whio], where we have an `IODev.seek()` function which natively looks like:
+
+{{{
+whio_size_t IODev::seek( whio_off_t, int );
+}}}
+
+Because the 2nd argument (the `int`) must have one of only a small subset of values (`SEEK_SET`, `SEEK_CUR`, or `SEEK_END`), we can use/abuse "overloading" to ensure that it is only called if JS passes us one of those values.
+
+First we need a custom predicate to determine if the 2nd argument matches one of the special `SEEK_xxx` values:
+
+{{{
+template <int I>
+struct ArgAt_IsWhence : ArgumentsPredicate
+{
+    inline bool operator()( v8::Arguments const & args ) const
+    {
+        if( args.Length() <= I ) return false;
+        else
+        {
+            v8::Handle<v8::Value> const & v(args[I]);
+            if( ! ValIs<int32_t>()(v) ) return false;
+            else switch( v->Int32Value() )
+            {
+              case SEEK_SET:
+              case SEEK_CUR:
+              case SEEK_END:
+                  return true;
+              default:
+                  return false;
+            }
+        }
+    }
+};
+}}}
+
+And now we can bind our `seek()` function using strong type/range checking, such that the native function will never be called unless the JS calls pass values which are both type- and range-legal:
+
+{{{
+typedef PredicatedInCaDispatcher< CVV8_TYPELIST((
+  PredicatedInCa< 
+      Argv_AndN< CVV8_TYPELIST((
+          Argv_Length<2>, ArgAt_IsA<0,whio_off_t>, ArgAt_IsWhence<1>
+      )) >,
+      MethodTo<InCa, IODev, whio_size_t (whio_off_t,int), &IODev::seek>
+  >
+)) > Seek;
+
+v8::InvocationCallback cb = Seek::Call;
+}}}
+
+_Yes_, it's ugly, and i _am_ looking for a new naming scheme for the `PredicatedXyz` family of templates. But when this approach is used, we can apply near-arbitrary logic to the callback dispatching process which can prevent (or allow) the JS-initiated calls to pass on (or not) into their bound native equivalents.
+
+What does that mean? It means that with the above binding in place, all of the following JS-side calls will fail with an argument validation exception:
+
+{{{
+dev.seek("1",whio.SEEK_SET); // 1st type is wrong
+dev.seek(0,"hi"); // 2nd type is incorrect
+dev.seek(1,17); // 2nd type is correct but it is not a SEEK_xxx value
+}}}
+
+We can use this sort of validation to check for `NULL` pointers in some cases as well, by applying a hypothetical `ArgAt_Is[Not]NULL<int,T>` predicate template (which does not exist but would be easy to do).
+
 
 = Forwarding and Overloading Constructors =
 
