Edited wiki page V8Convert_Whio through web user interface.

--- a/wiki/V8Convert_Whio.wiki
+++ b/wiki/V8Convert_Whio.wiki
@@ -222,7 +222,7 @@ This API wraps most of the [http://whiki.wanderinghorse.net/wikis/whio/?page=whi
 || `void installNamer(string)` || Installs a "namer" implementation in the EFS. See below. ||
 || `bool isRW()` || Returns true if the EFS is operating in read/write mode. ||
 || `int inodeId(string fname)` || Returns the inode ID for the given name _if_ a namer is installed. ||
-|| `label(string)` || Sets the EPFS label. The property `label.maxLength` Specifies the maximum legal length (in bytes) of a label string (this is a compile-time constant and cannot be changed without invaliding EFS files created using other values). ||
+|| `void label(string)` || Sets the EPFS label. The property `label.maxLength` Specifies the maximum legal length (in bytes) of a label string (this is a compile-time constant and cannot be changed without invaliding EFS files created using other values). ||
 || `string label()` || Gets the EPFS label. ||
 || `void name(int inodeID, string name)` || Sets the given inode ID's name. Use a `null` name to un-set it. A given namer implementation may impose certain restrictions on name patterns and/or lengths. ||
 || `string name(int inodeID)` || Returns the name for the given inode. ||
@@ -233,11 +233,10 @@ This API wraps most of the [http://whiki.wanderinghorse.net/wikis/whio/?page=whi
 Opening an EFS can fail for several reasons:
 
   * The storage being read was not formatted as an EFS, or was formatted with an incompatible version.
-  * Read/write access was required by the storage is read-only.
+  * Read/write mode was requested but the storage is read-only.
   * Out of drive space or memory.
   * The given combination of fs options is invalid (see `whio_epfs_mkfs()` and friends for the legal ranges). e.g. trying to create an EFS with an inode count of 0 or a block size of 10 bytes will fail. Likewise, really large values (a block size of `2^30`) might fail in various ways.
   * Ad nauseum.
-
 
 == Achtung ==
 
@@ -245,7 +244,8 @@ Opening an EFS can fail for several reasons:
   * Likewise, never "interweave" EPFS instance usage across `setTimeout()` or similar.
   * Only access the EFS from the thread it was opened in and never open the same EFS container multiple times inside one process. The instances can't see each other and will eventually step on one another's toes.
   * If enabled at compile-time (is on by default on non-Windows platforms), the EPFS [http://whiki.wanderinghorse.net/wikis/whio/?page=whio_epfs_locking locks EFS container files] when it is opened, and keeps the lock for the life of the EFS instance.
-  * Use at your own risk. A crash caused by another thread, a `SIGINT` in the current thread, or similar, while an EFS is writing could lead to EFS container corruption.
+  * Use at your own risk. A crash caused by another thread, a poorly-timed `SIGINT`, or similar, while an EFS is writing could lead to EFS container corruption.
+  * Inode and block IDs are 16 bits, any passing numbers larger than `2^16` as EFS option values to the formatting ctors will likely result in numeric overflow/overwrap and unexpected results. There are more details about this in the "Sizes, Ranges, ..." section of this page.
 
 == Creating a new EFS ==
 
@@ -277,17 +277,44 @@ If whio is built with file locking support, the formatting will fail without sto
 
 == Adding Inode Name Support ==
 
-By default an EPFS does not have support for naming inodes (they are referenced only by their IDs). If you want to be able to assign names to the files in your EFS you must install a "namer" (ideally immediately after formatting it). "Namer" is an abstract interface which EPFS uses to delegate the naming of inodes to 3rd-party code. The namer implementation is separated from the core library because different inode-to-name mapping mechanisms have wildly varying performance and memory tradeoffs, and this allows us to experiment with different models without touching the core library.
+By default an EPFS does not have support for naming inodes (they are referenced only by their IDs). If you want to be able to assign names to the files in your EFS you must install a "[http://whiki.wanderinghorse.net/wikis/whio/?page=whio_epfs_namer namer]" (ideally immediately after formatting the EFS). "Namer" is an abstract interface which EPFS uses to delegate the naming of inodes to 3rd-party code. The namer implementation is separated from the core library because different inode-to-name mapping mechanisms have wildly varying storage, memory, and performance trade-offs, and this allows us to experiment with different models without touching the core library.
+
+To install a namer:
 
 {{{
-fs.installNamer("ht"); // "ht" is the only namer implementation so far.
+fs.installNamer("ht"); // persistent hashtable-based namer
+// Or:
+fs.installNamer("array"); // non-persistent memory-based namer
 }}}
+
+(See the next subsection for a description of each namer.)
 
 When opening the EPFS later on, its namer (if any) will be automatically loaded - it only needs to be installed one time, ideally right after formatting the storage.
 
-There is currently no way to remove or replace a namer once it is installed. Note that a given namer implementation might not support all optional operations provided by that interface. Namers _may_ provide both inode-id-to-name and name-to-inode-id mappings, but are not required to perform both (the "ht" namer does).
+There is currently no way to remove or replace a namer once it is installed (aside from re-creating the EFS and copying over the p-file contents).
 
-Each namer may impose limitations on the length and name patterns of inode names. The "ht" namer imposes no length limits but reserves names matching `<([NUMBER])>` for its internal use.
+Note that a given namer implementation might not support all optional operations provided by that interface. Namers _may_ provide both inode-id-to-name and name-to-inode-id mappings, but are not required to perform both (the "ht" namer does).
+
+Each namer may impose limitations on the length and name patterns of inode names.
+
+=== Supported Namer Implementations ===
+
+The "namer" interface abstracts away the details of inode-to-name mappings from the EPFS core API because various implementations of such mappings have widely varying storage, memory, and performance trade-offs.
+
+The library currently supports the namers described below. The names shown here are the ones which may be passed to `EPFS.installNamer()`.
+
+*The `ht` namer* stores inode-to-name mappings in a hashtable which is itself stored in the EPFS. Has constant memory costs and amortized O(1) insert/search/remove costs. Insertions _sometimes_ (depending on usage patterns) have an associated O(N) cost, where N is some function of the number of _free_ blocks in the storage which must be considered for re-allocation. The "ht" namer imposes no name length limits but reserves names matching `<([NUMBER])>` for its internal use.
+
+*The `array` namer* is a _non-persistent_ namer, meaning that the names set in a given EPFS session are not stored to disk and _are lost_ when the EPFS instance is closed. This is intended mainly as (A) a proof-of-concept namer and (B) as an alternative namer for in-memory EPFS instances (those created using the special filename `:memory:`). It has O(N) memory costs (N=inode count times average name length)), O(N) search performance for name-to-inode-id operations, but effectively O(1) for inode-id-to-name operations. This namer imposes no specific name length limits.
+
+For example:
+
+{{{
+var fs = new EPFS(":memory:", true,
+                  {inodeCount:20, blockSize:2000, maxBlocks:0} );
+fs.installNamer("array");
+}}}
+
 
 == Opening an Existing EFS ==
 
@@ -348,14 +375,14 @@ Please see the native `whio_epfs_foreach_inode()` for more information.
 
 *ACHTUNG:* is it critical that all p-files opened from a given EFS be `close()`d _BEFORE_ their containing EFS is `close()`d, or Undefined Behaviour ensues.
 
-Instances of `whio.EPFS.PseudoFiles` are _not_ created via constructor calls - they are created _only_ using `EPFS.open()`. `PseudoFile` is a full-fledged `IODev` subclass and adds the following methods:
+Instances of `whio.EPFS.PseudoFile` are _not_ created via constructor calls - they are created _only_ using `EPFS.open()`. `PseudoFile` is a full-fledged `IODev` subclass and adds the following methods:
 
 || *Member* || *Description* ||
 || `int touch([Date|uint32=currentTime])` || Sets the device's modification timestamp to the given Unix Epoch time. Returns the new (touched) time. ||
 || `uint32 mtime` || Get or set the modification time as a `uint32` Unix Epoch timestamp. Note that the JS `Date` class uses (Epoch + milliseconds) time. ||
 || `uint32 clientFlags` || Gets or sets the "client flags" (32-bit unsigned integer) associated with the p-file. ||
 || `uint inodeId` || Gets the EPFS inode ID of the p-file. It is guaranteed to be non-0. Setting this causes an exception. ||
-|| `string name` || Gets or sets the p-file's name. If the parent EFS has no namer then accessing this property will throw an exception. (FIXME: only throw when _setting_ i that case, else return `null`.)||
+|| `string name` || Gets or sets the p-file's name. If the parent EFS has no namer then accessing this property will throw an exception. (FIXME: only throw when _setting_ in that case, else return `null`.)||
 
 === Important Notes ===
 
@@ -407,6 +434,7 @@ Note that only p-files can only be opened in read-write mode if the EFS itself i
 
   * ALWAYS close ALL p-files _BEFORE_ the underlying EPFS is closed. If you do not, you risk Undefined Behaviour.
   * P-files are full-fledged i/o devices, and can be used with, e.g. the `InStream` and `OutStream` wrappers.
+  * If an EPFS is opened in read-only mode, p-files can only be opened in read-only mode.
   * A given inode can be opened multiple times (up to 255 times). Each opened copy has its own cursor and read/write mode, but shares the same underlying inode metadata.
   * When writing large amounts of data to a p-file, if you know the size in advance, use `truncate()` to re-size the p-file. Errors during writing are most often caused by running out of space in the EPFS, so truncating in advance will get the majority of the error conditions out of the way up front, instead of hitting them in the middle of writing. There is no API for determining how much space the EPFS itself can still hold (and calculating that would be computationally very expensive).
   * To clear a p-file's name, set it to `null`.
@@ -416,11 +444,11 @@ Note that only p-files can only be opened in read-write mode if the EFS itself i
   * ALWAYS close ALL p-files _BEFORE_ the underlying EPFS is closed. If you do not, you risk Undefined Behaviour.
   * EPFS has no concept of directories, but instead supports a single flat namespace. Depending on the namer implementation, names may or may not have restrictions on how they can be named. The "ht" namer allows essentially any names, including those which contain what appear to be path parts, e.g. `/foo/bar.txt`.
   * The inode count of an EFS is fixed when the EFS container storage is formatted, and cannot be changed later.
-  * If an EPFS is opened in read-only mode, p-files can only be opened in read-only mode.
   * EPFS does not require that inodes have names. An application is free to pick its own inode IDs and use those for opening inodes (provided they are within range of the EFS' inode count).
   * Opening p-files by their inode ID is significantly faster than opening them by name.
   * If using a namer, try to avoid using very small data block sizes (e.g. 4kb), to avoid fragmenting the namer's storage (which hurts performance on name-get/set operations).
   * If you know what your data looks like in advance, you can size the inode count and data block size for a optimum fit (or nearly so). As a rule, having larger data blocks means using less memory at run-time, as we have to manager fewer blocks per inode. However, having larger data blocks means more wasted storage for small p-files.
+  * The EPFS "mkfs" constructor taking a filename accepts the special name `:memory:` to mean an in-memory filesystem. The down-side to this is that the EFS and all of its contents will be destroyed when the EPFS instance is closed. 
 
 = Sizes, Ranges, and Memory Requirements =
 
@@ -428,7 +456,7 @@ Note that only p-files can only be opened in read-write mode if the EFS itself i
 
 The core library is compiled with 32-bit i/o ranges by default (C type=`whio_size_t`). Since v8 does not directly support 64-bit values, it is not recommended to compile whio for 64-bit i/o (with `WHIO_SIZE_T_BITS=64`) in the context of this binding API.
 
-Memory usage is minimal. All of the stream/device implementations are thin wrappers around lower-level functionality (e.g. `FILE` handles or raw memory operations). The only one which needs (potentially) significant memory is the `MemoryIODev` class (in-memory devices, which can theoretically grow as large as your system's allocator will allow, to within the size limit of `whio_size_t`). All of the stream/device handle types have a smaller (by far!) `sizeof()` than `sizeof(FILE)` (=216 on my 32-bit box).
+Memory usage is minimal. All of the stream/device implementations are thin wrappers around lower-level functionality (e.g. `FILE` handles or raw memory operations). The only one which needs (potentially) significant memory is the `MemoryIODev` class (in-memory devices, which can theoretically grow as large as your system's allocator will allow, to within the size limit of `whio_size_t`). All of the stream/device handle types have a smaller (by far!) `sizeof()` than `sizeof(FILE)` (=216 on my 64-bit box and 148 on my 32-bit machine, and `fopen()` allocates twice that amount).
 
 == EPFS ==
 
