Edited wiki page JSPDO_API through web user interface.

--- a/wiki/JSPDO_API.wiki
+++ b/wiki/JSPDO_API.wiki
@@ -26,6 +26,8 @@ This class is synonymous with a database connection. Its main responsibilities a
 || `void rollback()` || Rolls back the current transaction. ||
 || `void fetchAll(object)` || Executes a query and returns all result records. Described in detail below. ||
 || `mixed selectValue(string|Object)` || Selects a single value from the database. Described below. ||
+|| `string quote(string value)` || Returns the SQL-quoted form of a string. ||
+|| `string qualify(string identifier)` || Returns the SQL-quoted form of a table or column name. ||
 
 Instance properties (read-only!):
 
@@ -176,7 +178,7 @@ These objects are _only_ to be created by calling `JSPDO.prepare()`, and not via
 
 || *Method* || *Description* ||
 || `void bind(index[,value])` || Binds a value (default=NULL) to the given _1-based_ parameter index or name (in the form `:paramName`). The _type_ of the given value determines how the value is bound (e.g. as an integer, double, string, or BLOB ([V8Convert_ByteArray ByteArray]). ||
-|| `void bind(Array)` || Binds each value in the given array to the next subsequent bindable paramter. e.g. `bind([7,null,11])` binds parameters 1 to 3 with the given values. ||
+|| `void bind(Array)` || Binds each value in the given array to the next subsequent bindable parameter. e.g. `bind([7,null,11])` binds parameters 1 to 3 with the given values. ||
 || `void bind(Object)` || Binds each key/value pair in the given object, treating the object's keys as bound parameter names. e.g. `bind({':p1',':p2':...})` ||
 || `void bind(Statement)` || Binds all columns from the `Statement` object argument to the columns in the current statement. This can be used, e.g. to copy results from one table into another. TODO: accept array of param column numbers/names to copy, instead of copying all. ||
 || `bool step()` || "Steps" one row through a result set or executes a non-result query. Returns false if it is at the end of the set (or the query had no data to return, like an `INSERT`) or true if it successfully fetched a row. ||
